--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ python:
   - "nightly"
 install:
   - "pip install pytest"
-  - "pip install -r requirements"
+  - "pip install -r requirements.txt"
 script : python -m pytest tests/
